--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ before_script:
   - ./cc-test-reporter before-build
 install:
   - pip install coverage
+  - pip install -r requirements.txt
 script:
   - python setup.py test
 after_success:
