--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,30 @@
-language: python
-python:
-  - "3.7"
-  - "3.8"
-  - "nightly"
-before_script:
-  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-  - chmod +x ./cc-test-reporter
-  - ./cc-test-reporter before-build
-install:
-  - pip install coverage
-  - pip install -r requirements.txt
+jobs:
+  include:
+    - sudo: required
+      services:
+        - docker
+      env: DOCKER_IMAGE=quay.io/pypa/manylinux1_x86_64
+           PLAT=manylinux1_x86_64
+           BUILD=true
+    - sudo: required
+      services:
+        - docker
+      env: DOCKER_IMAGE=quay.io/pypa/manylinux1_i686
+           PRE_CMD=linux32
+           PLAT=manylinux1_i686
+           BUILD=true
+    - sudo: required
+      services:
+        - docker
+      env: DOCKER_IMAGE=quay.io/pypa/manylinux2010_x86_64
+           PLAT=manylinux2010_x86_64
+           BUILD=true
+    - sudo: false
+      env: BUILD=false
+      language: python
+      python:
+        - "3.7"
+        - "3.8"
+        - "nightly"
 script:
-  - python setup.py test
-after_success:
-  - coverage xml
-  - ./cc-test-reporter after-build -t coverage.py --exit-code $TRAVIS_TEST_RESULT
   - bash build.sh
-
