--- a/setup.cfg
+++ b/setup.cfg
@@ -10,6 +10,8 @@ description = A library for 3D geometry
 url = https://github.com/Cervi-Robotics/geom3d
 classifier =
     Programming Language :: Python
+    Programming Language :: Python :: 3.5
+    Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: Implementation :: CPython
