--- a/setup.cfg
+++ b/setup.cfg
@@ -18,6 +18,7 @@ classifier =
     Operating System :: OS Independent
     Development Status :: 2 - Pre-Alpha
     Topic :: Software Development :: Libraries
+    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
 
 [pycodestyle]
 max-line-length = 100
